# dp-monster

./: .gitignore  BTSP.csv  LICENSE  README.md  RTDP.h  Roadmap.md  SOP-UB.csv  bitset-base.h  build.sh  dp-base.h  dp-recovery.cpp  function-kits.h  log-aux.h  lower-bound.h  monster-main.cpp  parse-args.h  prec-ord.cpp  prec-ord.h  reader-base.h  time-aux.h
data/TSPLIB/: ESC07.sop  ESC11.sop  ESC12.sop  ESC25.sop  ESC47.sop  ESC63.sop  ESC78.sop  br17.10.sop  br17.12.sop  ft53.1.sop  ft53.2.sop  ft53.3.sop  ft53.4.sop  ft70.1.sop  ft70.2.sop  ft70.3.sop  ft70.4.sop  kro124p.1.sop  kro124p.2.sop  kro124p.3.sop  kro124p.4.sop  p43.1.sop  p43.2.sop  p43.3.sop  p43.4.sop  prob.100.sop  prob.42.sop  rbg048a.sop  rbg050c.sop  rbg109a.sop  rbg150a.sop  rbg174b.sop  rbg253a.sop  rbg323a.sop  rbg341a.sop  rbg358a.sop  rbg378a.sop  ry48p.1.sop  ry48p.2.sop  ry48p.3.sop  (+1 more)
data/TSPLIB/br17.10.sop/: cost.txt  prec.txt
data/TSPLIB/br17.12.sop/: cost.txt  layout.txt  prec.txt
data/TSPLIB/rbg378a.sop/: cost.txt
data/TSPLIB/ry48p.3.sop/: cost.txt  prec.txt
data/t-SOPLIB06/: R.200.100.1.sop  R.200.100.15.sop  R.200.100.30.sop  R.200.100.60.sop  R.200.1000.1.sop  R.200.1000.15.sop  R.200.1000.30.sop  R.200.1000.60.sop  R.300.100.1.sop  R.300.100.15.sop  R.300.100.30.sop  R.300.100.60.sop  R.300.1000.1.sop  R.300.1000.15.sop  R.300.1000.30.sop  R.300.1000.60.sop  R.400.100.1.sop  R.400.100.15.sop  R.400.100.30.sop  R.400.100.60.sop  R.400.1000.1.sop  R.400.1000.15.sop  R.400.1000.30.sop  R.400.1000.60.sop  R.500.100.1.sop  R.500.100.15.sop  R.500.100.30.sop  R.500.100.60.sop  R.500.1000.1.sop  R.500.1000.15.sop  R.500.1000.30.sop  R.500.1000.60.sop  R.600.100.1.sop  R.600.100.15.sop  R.600.100.30.sop  R.600.100.60.sop  R.600.1000.1.sop  R.600.1000.15.sop  R.600.1000.30.sop  R.600.1000.60.sop  (+8 more)
docker/: Dockerfile  build_docker.sh  make_project.sh  run_bash.sh
exp-script/: exp6-hRtDP.csv  exp6-hRtDP.py  exp6.1-DP-FWD-TSP.csv  exp6.1-DP-FWD-TSP.py
src/: CMakeLists.txt  DPBB.h  RTDP.h  bitset-base.cpp  bitset-base.h  dp-base.h  dp-recovery.h  instance.h  lower-bound.h  mem-rec.h  monster-main.cpp  parse-args.h  prec-ord.h  reader-base.cpp  reader-base.h  spinlock.h
src/parallel_hashmap/: phmap.h
tools/: agg.py  dagg.sh  docker_run.sh  drun.sh  run.py  test_batch.csv
